# utf-8-codec

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Utf8CodecConfig.cmake.in  utf-8-byte-test.c  utf-8-byte.c  utf-8-byte.h  utf-8-closed-intervals.c  utf-8-codec-test.c  utf-8-codec.c  utf-8-codec.h  utf-8-sequence-test.c  utf-8-sequence.c  utf-8-sequence.h  utf8-byte-test.c  utf8-byte.c  utf8-char.h  utf8-closed-intervals.c  utf8-closed-intervals.h  utf8-point-test.c  utf8-point.c  utf8-point.h  utf8-sequence-test.c  utf8-sequence.c  utf8-sequence.h  utf8-string-test.c  utf8-string.c  utf8-string.h
